done with refactoring only fixing the spacing is remaining

--- a/alpha/css/pages/landing.css
+++ b/alpha/css/pages/landing.css
@@ -21,7 +21,7 @@
 .alpha__header__main {
   width: max-content;
   max-width: 40rem;
-  height: 50%;
+  height: 40%;
   gap: 1rem;
   color: var(--color-white);
 }
@@ -65,4 +65,5 @@
 .alpha__version {
   color: var(--color-purple);
   min-width: max-content;
+  display: inline-block;
 }
