--- a/css/base/utilities.css
+++ b/css/base/utilities.css
@@ -11,7 +11,7 @@
 
 /* Text utilities  */
 
-.text__center {
+.text-center {
   text-align: center;
 }
 .text__left {
@@ -38,6 +38,14 @@
 .w-auto {
   width: auto;
 }
+
+.w-screen {
+  width: 100vw;
+}
+
+.max-w-screen {
+  max-width: 100vw;
+}
 /* width */
 
 .h-full {
@@ -54,6 +62,14 @@
 
 .h-auto {
   height: auto;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.max-h-screen {
+  max-height: 100vh;
 }
 
 /* MARGIN */
@@ -186,46 +202,106 @@
 .p-8 {
   padding: 8rem;
 }
+.pt-1 {
+  padding-top: 1rem;
+}
+.pt-2 {
+  padding-top: 2rem;
+}
+.pt-4 {
+  padding-top: 4rem;
+}
+.pt-6 {
+  padding-top: 6rem;
+}
+.pt-8 {
+  padding-top: 8rem;
+}
+.pb-1 {
+  padding-bottom: 1rem;
+}
+.pb-2 {
+  padding-bottom: 2rem;
+}
+.pb-4 {
+  padding-bottom: 4rem;
+}
+.pb-6 {
+  padding-bottom: 6rem;
+}
+.pb-8 {
+  padding-bottom: 8rem;
+}
+.pl-1 {
+  padding-left: 1rem;
+}
+.pl-2 {
+  padding-left: 2rem;
+}
+.pl-4 {
+  padding-left: 4rem;
+}
+.pl-6 {
+  padding-left: 6rem;
+}
+.pl-8 {
+  padding-left: 8rem;
+}
+.pr-1 {
+  padding-right: 1rem;
+}
+.pr-2 {
+  padding-right: 2rem;
+}
+.pr-4 {
+  padding-right: 4rem;
+}
+.pr-6 {
+  padding-right: 6rem;
+}
+.pr-8 {
+  padding-right: 8rem;
+}
 
 /* BORDER RADIUS */
 
-.border--rad-s {
+.rounded-s {
   border-radius: 0.5rem;
 }
-.border--rad-m {
+.rounded-m {
   border-radius: 1rem;
 }
-.border--rad-l {
+.rounded-l {
   border-radius: 1.5rem;
 }
-.border--rad-f {
+.rounded-f {
   border-radius: 50%;
 }
 
 /* BORDER WIDTH */
 
-.border--s {
+.border-s {
   border-width: 1px;
 }
-.border--m {
+.border-m {
   border-width: 2px;
 }
-.border--l {
+.border-l {
   border-width: 4px;
 }
-.border--xl {
+.border-xl {
   border-width: 6px;
 }
 
 /* BORDER STYLE */
 
-.border--solid {
+.border-solid {
   border-style: solid;
 }
-.border--dashed {
+.border-dashed {
   border-style: dashed;
 }
-.border--dotted {
+.border-dotted {
   border-style: dotted;
 }
 
